-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.18, 6.5.8, 6.8.1
-
3a9bc99b1 (dev), 49a442e6a (dev)
lupdate fails with "tr() cannot be called without context" error or assigns incorrect translation context for translatable strings marked with QObject::tr() when the template functions definitions for the template specialization are located in the source file instead of the header file.
lupdate correctly generates the ts file and the errors do not occur when QCoreApplication::translate() is used.
Attached example reproduces the issue.
For Gerrit Dashboard: QTBUG-132832 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
659600,4 | lupdate: add support for template specializations | dev | qt/qttools | Status: MERGED | +2 | +1 |
668685,3 | lupdate: detect left shift tokens | dev | qt/qttools | Status: MERGED | +2 | +1 |