lupdate: add support for template specializations

lupdate fails to identify the context in a method with
template specialization. This patch adds some lines to
identify a method with template specialization, and
correctly parse its context.

Fixes: QTBUG-132832
Change-Id: I6829f898d174d8507587cbe2c9818218962c0b53
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>